test/success/types_more_monop.cvc
#include "civic.h"

export int main() {
    float a = 0.0;
    a = -(5.0 * 6.0);
    return 0;
}
