test/fail/bad_init.cvc
#include "civic.h"

export int main() {
    float a = 0;
    return 0;
}
